--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p></p>
         <br><p class="i">графика- 2d pixsel (no blur image)</p>
         <br><p class="i">версия- бета тест, это лишь прототип игры, все механники доступны сразу без временных промежутков, после выпуска версии 1.0 вы сможете играть только с игроками, которые тоже играют в бета версию, пока не скачаете версию 1.0</p>
-        <img src="logo.png" alt="">
+        <img src="sprite3-sheet0.png" alt="">
         <a class="ssilka" href="https://www.virustotal.com/gui/home/upload">проверить на virus total</a>
 </body>
 </html> 
