--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Download fY by sprite7000</title>
     <link rel="stylesheet" href="Untitled-2.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
