--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p class="fy">fY</p>
         <p class="i">2д игра с мультиплеером сделанная 12 летним школьником</p>
             
-        <a class="skachat" href="https://disk.yandex.ru/d/jfBn0U0YBHVE8w" download>Скачать для windows "64" windows "32" osx "64" linux "64" linux "32"</a>
+        <a class="skachat" href="https://disk.yandex.ru/d/BknqR4AlE52nfA" download>Скачать для windows "64" windows "32" osx "64" linux "64" linux "32"</a>
         <p></p>
         <br><p class="i">графика- 2d pixsel (no blur image)</p>
         <br><p class="i">версия- бета тест, это лишь прототип игры, все механники доступны сразу без временных промежутков, после выпуска версии 1.0 вы сможете играть только с игроками, которые тоже играют в бета версию, пока не скачаете версию 1.0</p>
