--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <a class="information" href="#opisanie">Описание</a>
     </div>
     <div  class="logo">
-        <img src="лого.png" alt="">
+        <img class="logo" src="лого.png" alt="">
         <p class="iii">Sprite's Games studio я выпускаю свои игры, хоть они и выглядят как из powerpoint</p>
     </div>
     <div class="i">
 
     </div>
     <div class="cs2">
-        <img src="cs2.png" alt="">
+        <img class="game" src="cs2.png" alt="">
         <a class="download" href="https://disk.yandex.ru/d/esik6eGFUvc6zw">Установить "пародия"</a>
     </div>
     
     <div class="fnaf">
-        <img src="fnaf.png" alt="">
-        <a class="download" href="https://disk.yandex.com/d/9eH5vVAmPGyJkw">Установить "пародия"</a>
+        <img class="game" src="fnaf.png" alt="">
+        <a class="download" href="https://disk.yandex.ru/d/n5fKQK3lEA9Muw">Установить "пародия"</a>
     </div>
     <br>
     <br>
