--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div  class="logo">
         <img class="logo" src="лого.png" alt="">
-        <p class="iii">Sprite's Games studio я выпускаю свои игры, хоть они и выглядят как из powerpoint</p>
+        <p class="iii">Sprite's Games studio я выпускаю свои пародии</p>
     </div>
     <div class="i">
 
