--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <br>
     <br>
     <h1 id="opisanie">Описание:</h1>
-    <p class="thetext">эти игры я сделал на движке: construct 2, этот движок предназначен для простых 2д игр</p>
+    <p class="thetext">эти игры я сделал на движке: construct 2, этот движок предназначен для простых 2д игр,я использую плагин для подключения к сети</p>
     <br>
     <br>
     <br>
