--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="fnaf">
         <img class="game" src="fnaf.png" alt="">
-        <a class="download" href="https://disk.yandex.ru/d/n5fKQK3lEA9Muw">Установить "пародия"</a>
+        <a class="download" href="https://disk.yandex.ru/d/sbG6jCD6L901hQ">Установить "пародия"</a>
     </div>
     <br>
     <br>
