--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="fnaf">
         <img class="game" src="fnaf.png" alt="">
-        <a class="download" href="https://disk.yandex.ru/d/YgH52QaqTDyKWQ">Установить "пародия"</a>
+        <a class="download" href="https://disk.yandex.ru/d/k8E-FH-ckD1xZg">Установить "пародия"</a>
     </div>
     <br>
     <br>
